Added snake controls

--- a/K-Arcade/Snake/snake.html
+++ b/K-Arcade/Snake/snake.html
@@ -54,6 +54,13 @@
         <a id="newgame_menu">- New game</a>
         <a id="setting_menu">- Settings</a>
     </div>
+    
+    <!-- Controls -->
+    <div id="controls">
+        <span><span>&lt;</span><span>&gt;</span></span>
+        <span><span>&lt;</span><span>&gt;</span></span>
+    </div>
+
 </body>
 <script src="snake-script.js"></script>
 </html>
