--- a/K-Arcade/Snake/snake.html
+++ b/K-Arcade/Snake/snake.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K-Arcade | Snake</title>
     <link rel="stylesheet" href="snake-style.css">
+    <link rel="icon" href="img/KClogo.png">
 </head>
 <body>
     <!-- Score -->
