--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K-Lab</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/KClogo.png">
 </head>
 <body>
     <div class="main-container">
