Added outrun and pacman

--- a/K-Arcade/arcade.html
+++ b/K-Arcade/arcade.html
@@ -11,9 +11,9 @@
         <ol>
             <li><a class="arrow" href="Pong/pong.html"><i class="fas fa-arrow-alt-right"></i>Pong</a></li>
             <li><a class="arrow" href="Snake/snake.html"><i class="fas fa-arrow-alt-right"></i>Snake</a></li>
-            <!-- <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Pacman</a></li>
-            <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Asteroids</a></li>
-            <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>OutRun</a></li>
+            <li><a class="arrow" href="OutRun/outrun.html"><i class="fas fa-arrow-alt-right"></i>OutRun</a>
+            <li><a class="arrow" href="Pacman/pacman.html"><i class="fas fa-arrow-alt-right"></i>Pacman</a></li>
+            <!-- <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Asteroids</a></li>
             <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Flappy Bird</a></li>
             <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Key Sprinter</a></li>
             <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Marbles</a></li>
