--- a/K-Arcade/Pong/pong.html
+++ b/K-Arcade/Pong/pong.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K-Arcade | Pong</title>
     <link rel="stylesheet" href="pong-style.css">
-    <link rel="icon" href="img/KClogo.png">
+    <link rel="icon" href="/img/KClogo.png">
 </head>
 <body>
     <!-- Main Menu Screen -->
