--- a/K-Arcade/arcade.html
+++ b/K-Arcade/arcade.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K-Arcade</title>
     <link rel="stylesheet" href="arcade-style.css">
+    <link rel="icon" href="img/KClogo.png">
 </head>
 <body>
     <div class="bg">
@@ -13,7 +14,7 @@
             <li><a class="arrow" href="Snake/snake.html"><i class="fas fa-arrow-alt-right"></i>Snake</a></li>
             <li><a class="arrow" href="OutRun/outrun.html"><i class="fas fa-arrow-alt-right"></i>OutRun</a>
             <li><a class="arrow" href="Pacman/pacman.html"><i class="fas fa-arrow-alt-right"></i>Pacman</a></li>
-            <!-- <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Asteroids</a></li>
+            <!--<li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Asteroids</a></li>
             <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Flappy Bird</a></li>
             <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Key Sprinter</a></li>
             <li><a class="arrow"><i class="fas fa-arrow-alt-right"></i>Marbles</a></li>
